--- a/deployment/statefulset.yaml
+++ b/deployment/statefulset.yaml
@@ -56,7 +56,7 @@ spec:
             - name: IS_CLUSTER_NODE
               value: "yes"
             - name: BANNER_TEXT
-              value: "Nifi Cluster"
+              value: ""
 
   volumeClaimTemplates:
   - metadata:
